# 3DEngine

./: .gitignore  3DEngine.cpp  3DEngine.h  CMakeLists.txt  CMakePresets.json  build_with_log.bat
scripts/build-sys/: .env  notify_build.py
src/: main.cpp
src/engine/ecs/include/: Component.h  ECSManager.h  Entity.h  System.h
src/engine/ecs/src/: ECSManager.cpp  Entity.cpp
src/engine/renderer/include/: MeshRenderer.h  MeshRendererComponent.h  OpenGLRenderer.h  RenderSystem.h  Renderer.h  Shader.h  ShaderComponent.h
src/engine/renderer/src/: Shader.cpp
src/shaders/: fragment_shader.glsl  shader_cache  shader_cache_fragment.hash  shader_cache_vertex.hash  vertex_shader.glsl
